...
          crossAxisAlignment: CrossAxisAlignment.start,
          children: [
            Row(
              mainAxisAlignment: MainAxisAlignment.spaceBetween,

              children: [
                Text('About', style: cTextBold),
                Obx(() {
                  if (controller.isForm.value) {
                    return TextButton(
                      onPressed: () {
                        if (controller.formKey.currentState!.validate()) {
                          controller.submit();
                          userController.getUserProfile();
                        }

                        controller.toggleForm();
                      },
                      child: Text(
                        'Save & Update',
                        style: cTextMedXS.copyWith(
                          color: goldenColor.colors.first,
                        ),
                      ),
                    );
                  } else {
...
                          ),
                        ),
                        Expanded(
                          flex: 3,
                          child: YouappTextFormFieldWidget(
                            controller: controller.nameController,
                            hintText: 'Enter Name',
                            validator: (value) {
                              if (value == null || value.isEmpty) {
                                return "Display name required";
                              }
                              return null;
                            },
...

                        Expanded(
                          flex: 3,
                          child: YouappTextFormFieldWidget(
                            controller: controller.heightController,
                            keyboardType: TextInputType.number,
                            hintText: 'Add height',
                            validator: (value) {
                              if (value == null || value.isEmpty) {
                                return "Height required";
                              }

                              final height = int.tryParse(value);
...

                        Expanded(
                          flex: 3,
                          child: YouappTextFormFieldWidget(
                            controller: controller.weightController,
                            keyboardType: TextInputType.number,
                            hintText: 'Add weight',
                            validator: (value) {
                              if (value == null || value.isEmpty) {
                                return "Weight required";
                              }

                              final weight = int.tryParse(value);
...
